some changes in userservice

--- a/UserService/Dockerfile
+++ b/UserService/Dockerfile
@@ -7,12 +7,12 @@ FROM gradle:8-jdk21-alpine AS builder
 WORKDIR /home/gradle/src
 COPY --chown=gradle:gradle . .
 
-# Force Gradle to use the Docker-based JDK for compilation, instead of trying to detect system info
+# Force Gradle to use the Docker-based JDK for compilation
 ENV JAVA_HOME=/opt/java/openjdk
 ENV GRADLE_OPTS="-Dorg.gradle.daemon=false -Dorg.gradle.java.home=$JAVA_HOME"
 
 # Build the project without running tests
-RUN gradle build -x test
+RUN ./gradlew build -x test
 
 # --------
 # Package stage
@@ -31,9 +31,7 @@ EXPOSE 8054
 # Set environment variables for PostgreSQL
 ENV SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/UserService \
     SPRING_DATASOURCE_USERNAME=admin \
-    SPRING_DATASOURCE_PASSWORD=password \
-    JWT_SECRET=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuYW1lIjoiSm9obiBVcGRhdGVkIiwiZW1haWwiOiJqb2hudXBkYXRlZEBleGFtcGxlLmNvbSIsInJvbGUiOiJzdHVkZW50IiwidXNlclR5cGUiOiJzdHVkZW50IiwiaWF0IjoxNzI5ODIwOTA1LCJleHAiOjE3Mjk5MDczMDV9.nDvKqscIiuJwRSlMFdBVlZusvqJXGGvLmqOn7zloFsk \
-    JWT_EXPIRATION=86400000
+    SPRING_DATASOURCE_PASSWORD=password
 
 # Entry point to run the application
 ENTRYPOINT ["java", "-jar", "/app/user-service.jar"]
