--- a/RoomService/Dockerfile
+++ b/RoomService/Dockerfile
@@ -5,14 +5,14 @@ FROM gradle:8-jdk21-alpine AS builder
 
 # Set working directory and copy project files
 WORKDIR /home/gradle/src
-COPY --chown=gradle:gradle . .
+COPY . .
 
-# Force Gradle to use the Docker-based JDK for compilation, instead of trying to detect system info
+# Force Gradle to use the Docker-based JDK for compilation
 ENV JAVA_HOME=/opt/java/openjdk
 ENV GRADLE_OPTS="-Dorg.gradle.daemon=false -Dorg.gradle.java.home=$JAVA_HOME"
 
-# Build the project without running tests and without bootJar if not necessary
-RUN gradle build -x test
+# Build the project without running tests
+RUN ./gradlew build -x test
 
 # --------
 # Package stage
