--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -25,3 +25,4 @@ spring.data.mongodb.enabled=false
 # Logging configuration
 logging.level.org.springframework=DEBUG
 logging.level.ca.gbc.userservice=DEBUG
+logging.level.org.springframework.security=DEBUG
