created booking service

--- a/BookingService/src/main/resources/application.properties
+++ b/BookingService/src/main/resources/application.properties
@@ -1,1 +1,20 @@
-spring.application.name=BookingService
+# Application name
+spring.application.name=${APPLICATION_NAME:BookingService}
+
+# Feign client URL configuration
+ROOM_SERVICE_URL=http://room-service:8090
+
+# Server configuration
+server.port=${SERVER_PORT:8060}
+
+# MongoDB configuration
+spring.data.mongodb.host=${MONGO_HOST:mongodb}
+spring.data.mongodb.port=${MONGO_PORT:27017}
+spring.data.mongodb.database=${MONGO_DB:BookingService}
+spring.data.mongodb.username=${MONGO_DB_USERNAME:admin}
+spring.data.mongodb.password=${MONGO_DB_PASSWORD:password}
+spring.data.mongodb.authentication-database=${MONGO_AUTH_DB:admin}
+
+# Disable JPA auto-configuration for MongoDB usage
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+spring.cloud.compatibility-verifier.enabled=false
