Some code reviews

--- a/EventService/src/main/resources/application-docker.properties
+++ b/EventService/src/main/resources/application-docker.properties
@@ -1,1 +1,28 @@
-spring.application.name=EventService
+# Application name with default value if not set in the environment
+spring.application.name=${APPLICATION_NAME:EventService}
+
+# User service URL for Feign client with default
+USER_SERVICE_URL=http://user-service:8054
+
+# Booking service URL for Feign client with default
+BOOKING_SERVICE_URL=http://booking-service:8060
+
+# Feign client URL configuration
+ROOM_SERVICE_URL=http://room-service:8090
+
+# Server port configuration with default fallback
+server.port=${SERVER_PORT:8062}
+
+# MongoDB configuration with defaults for a typical setup
+spring.data.mongodb.host=${MONGO_HOST:mongodb}
+spring.data.mongodb.port=${MONGO_PORT:27017}
+spring.data.mongodb.database=${MONGO_DB:EventService}
+spring.data.mongodb.username=${MONGO_DB_USERNAME:admin}
+spring.data.mongodb.password=${MONGO_DB_PASSWORD:password}
+spring.data.mongodb.authentication-database=${MONGO_AUTH_DB:admin}
+
+# Disable Hibernate JPA auto-configuration as we are using MongoDB
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+
+# Disable Spring Cloud compatibility verifier if not needed
+spring.cloud.compatibility-verifier.enabled=false
