--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -26,3 +26,7 @@ spring.data.mongodb.enabled=false
 logging.level.org.springframework=DEBUG
 logging.level.ca.gbc.userservice=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+spring.web.cors.allowed-origin-patterns=*
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://auth-server
+
