Final commit Assignment-1 Signing-off

--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,28 +1,20 @@
-# Spring application name
-spring.application.name=UserService
 
-# Application server settings
+spring.application.name=UserService
 server.port=8054
-# JWT secret key
 jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION:86400000}  # Default expiration time of 1 day
-
-# Database configuration (PostgreSQL)
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/UserService}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:admin}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}  # Replace with secure password
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}  
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Hibernate and JPA settings
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true  # Format SQL output for better readability
+spring.jpa.properties.hibernate.format_sql=true 
 
-# Disable MongoDB (since you're using PostgreSQL)
 spring.data.mongodb.enabled=false
 
-# Logging configuration
 logging.level.org.springframework=DEBUG
 logging.level.ca.gbc.userservice=DEBUG
 logging.level.org.springframework.security=DEBUG
