--- a/notification-service/src/main/resources/application-docker.properties
+++ b/notification-service/src/main/resources/application-docker.properties
@@ -1,31 +1,19 @@
-# Application Name
 spring.application.name=notification-service
 server.port=8085
 
 # Kafka Consumer Properties
-# Kafka broker address
 spring.kafka.bootstrap-servers=broker:29092
-
-# Consumer group ID for the NotificationService
 spring.kafka.consumer.group-id=notificationService
-
-# Deserializers for Kafka consumer keys and values
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-
-# Specify trusted packages for deserialization (ensures only allowed packages are deserialized to prevent security issues)
 spring.kafka.consumer.properties.spring.json.trusted.packages=ca.gbc.notificationservice.event
-
-# Map the event type for Kafka messages to their respective Java classes
-#spring.kafka.consumer.properties.spring.json.type.mapping=event:ca.gbc.notificationservice.event.EventPlacedEvent
-spring.kafka.consumer.properties.spring.json.type.mapping=event:ca.gbc.notificationservice.event.BookingPlacedEvent
-
-# Start reading messages from the earliest offset
+spring.kafka.consumer.properties.spring.json.type.mapping=event:ca.gbc.notificationservice.event.EventPlacedEvent
+#spring.kafka.consumer.properties.spring.json.type.mapping=event:ca.gbc.notificationservice.event.BookingPlacedEvent
 spring.kafka.consumer.auto-offset-reset=earliest
 
-# Mail Properties - SMTP
-# Configuration for sending emails via Mailtrap SMTP
+
+# Mail Properties-SMTP
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=acbd553ddef35e  # Mailtrap username
-spring.mail.password=8d269976a42d2b  # Mailtrap password
+spring.mail.username=ef10a40e6011cf
+spring.mail.password=d7a7895e26ed7f
